try to fix display on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,17 @@ body {
   margin: 0;
   padding: 0;
   background-color: #6cbbb3;
-  box-sizing: border-box;
   font-family: "Lato", sans-serif;
 }
 .container {
-  width: 80%;
+  border: 1px solid black;
+  width: 100vw;
   margin: auto;
   text-align: center;
 }
 .title {
   font-size: 3rem;
-  margin: 5%;
+  border: 1px solid red;
 }
 .board {
   width: 80vw;
@@ -23,6 +23,7 @@ body {
   grid-gap: 2%;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  border: 1px solid green;
 }
 .field {
   background-color: #efe784;
@@ -45,6 +46,10 @@ body {
 }
 
 @media (min-width: 700px) {
+  .container {
+    width: 80%;
+    margin: auto;
+  }
   .title {
     font-size: 5rem;
     margin: 5%;
@@ -55,6 +60,10 @@ body {
 }
 
 @media (min-width: 1000px) {
+  .container {
+    width: 80%;
+    margin: auto;
+  }
   .title {
     font-size: 5rem;
     margin: 3%;
